--- a/public/index_inicio.html
+++ b/public/index_inicio.html
@@ -1,39 +1,54 @@
 <!DOCTYPE html>
 
 <html lang="es">
-
-<head>
-
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <title>Tienda Pokémon</title>
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" 
-    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css"
+    />
 
-</head>
+    <link rel="stylesheet" href="/styles/Estilo_PokeShop.css" />
+  </head>
 
-<body>
-
-    <nav class="navbar navbar-expand-lg bg-dark">
+  <body>
+    <div class="PokeFondo">
+      <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">PokeShop</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+          <a class="navbar-brand" href="#"><i class="PokeShop bi bi-bag-dash-fill"> PokeShop</i></a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNavAltMarkup"
+            aria-controls="navbarNavAltMarkup"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-              <a class="nav-link active" aria-current="page" href="#">Inicio</a>
-              <a class="nav-link" href="#">Editar</a>
-              <a class="nav-link" href="#">Consultar</a>
+              <a class="Opcion nav-link active" aria-current="page" href="#">INICIO</a>
+              <a class="Opcion nav-link" href="#">EDITAR</a>
+              <a class="Opcion nav-link" href="#">CONSULTAR</a>
+              <a class="Opcion nav-link" href="#">ELIMINAR</a>
+              <a class="Carrito nav-link" href="#"><i class="bi bi-cart-fill"> Carrito</i></a>
             </div>
           </div>
         </div>
       </nav>
-    
-</body>
-
+    </div>
+  </body>
 </html>
