--- a/public/index_inicio.html
+++ b/public/index_inicio.html
@@ -18,37 +18,96 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css"
     />
-
+    <link rel="stylesheet" href="/styles/Estilo_Fondo_y_Navbar.css">
     <link rel="stylesheet" href="/styles/Estilo_PokeShop.css" />
   </head>
 
   <body>
-    <div class="PokeFondo">
-      <nav class="navbar navbar-expand-lg">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#"><i class="PokeShop bi bi-bag-dash-fill"> PokeShop</i></a>
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#navbarNavAltMarkup"
-            aria-controls="navbarNavAltMarkup"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav">
-              <a class="Opcion nav-link active" aria-current="page" href="#">INICIO</a>
-              <a class="Opcion nav-link" href="#">EDITAR</a>
-              <a class="Opcion nav-link" href="#">CONSULTAR</a>
-              <a class="Opcion nav-link" href="#">ELIMINAR</a>
-              <a class="Carrito nav-link" href="#"><i class="bi bi-cart-fill"> Carrito</i></a>
-            </div>
+    <nav class="navbar navbar-expand-lg">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#"
+          ><i class="PokeShop bi bi-bag-dash-fill"> PokeShop</i></a
+        >
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNavAltMarkup"
+          aria-controls="navbarNavAltMarkup"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav">
+            <a class="Opcion nav-link active" aria-current="page" href="#"
+              >INICIO</a
+            >
+            <a class="Opcion nav-link" href="#">CONSULTAR</a>
+            <a class="Opcion nav-link" href="#">EDITAR</a>
+            <a class="Opcion nav-link" href="#">ELIMINAR</a>
+            <a class="Carrito nav-link" href="#"
+              ><i class="bi bi-cart-fill"> Carrito</i></a
+            >
           </div>
         </div>
-      </nav>
+      </div>
+    </nav>
+
+    <div class="InfoS">
+      <h1>¿Quiénes somos?</h1>
+      <p>
+        Somos una tienda que vende Pokémon rescatados del Team Rocket. Se
+        encuentran desde la primera o la ultima evolucion, también importamos
+        pociones, pokeballs y MT para sus ataques. Estamos en las siguientes
+        regiones Kanto, Johto, Sinnoh, kalos y pronto en Galar. Estamos
+        autorizados por el profesor Oak y por maestros tales como Lance, Cintia,
+        N y el actual campeon mundial Ash.
+      </p>
+      <img class="LogoPika1" src="/image/pikachu.png" />
+      <img class="LogoPika2" src="/image/pikachu.png" />
+    </div>
+
+    <h1 class="TituloP">Pokemons/Productos</h1>
+
+    <div class="row justify-content-center">
+      <div class="col-sm-2">
+        <div class="card" style="width: 18rem">
+          <img src="/image/Pokemon.png" class="card-img-top" alt="..." />
+          <div class="card-body">
+            <h5 class="card-title">POKÉMONS</h5>
+            <a href="/public/index_Compra.html"><button type="button" class="btn btn-danger">VAMOS!!</button></a>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-2">
+        <div class="card" style="width: 18rem">
+          <img src="/image/Pocion.png" class="card-img-top" alt="..." />
+          <div class="card-body">
+            <h5 class="card-title">POCIONES</h5>
+            <a href="#" class="btn btn-primary">VAMOS!!</a>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-2">
+        <div class="card" style="width: 18rem">
+          <img src="/image/Pokeballs.png" class="card-img-top" alt="..." />
+          <div class="card-body">
+            <h5 class="card-title">POKEBALLS</h5>
+            <a href="#"><button type="button" class="btn btn-danger">VAMOS!!</button></a>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-2">
+        <div class="card" style="width: 18rem">
+          <img src="/image/Disco.png" class="card-img-top" alt="..." />
+          <div class="card-body">
+            <h5 class="card-title">MTS</h5>
+            <a href="#" class="btn btn-primary">VAMOS!!</a>
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
