--- a/public/index_inicio.html
+++ b/public/index_inicio.html
@@ -25,7 +25,7 @@
   <body>
     <nav class="navbar navbar-expand-lg">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#"
+        <a class="navbar-brand" href="/image/Campeon.jpg"
           ><i class="PokeShop bi bi-bag-dash-fill"> PokeShop</i></a
         >
         <button
@@ -44,10 +44,10 @@
             <a class="Opcion nav-link active" aria-current="page" href="#"
               >INICIO</a
             >
-            <a class="Opcion nav-link" href="#">CONSULTAR</a>
-            <a class="Opcion nav-link" href="#">EDITAR</a>
-            <a class="Opcion nav-link" href="#">ELIMINAR</a>
-            <a class="Carrito nav-link" href="#"
+            <a class="Opcion nav-link" href="/public/index_consultar.html">CONSULTAR</a>
+            <a class="Opcion nav-link" href="/public/index_editar.html">EDITAR</a>
+            <a class="Opcion nav-link" href="/public/index_eliminar.html">ELIMINAR</a>
+            <a class="Carrito nav-link" href="/public/index_carrito.html"
               ><i class="bi bi-cart-fill"> Carrito</i></a
             >
           </div>
@@ -86,7 +86,7 @@
           <img src="/image/Pocion.png" class="card-img-top" alt="..." />
           <div class="card-body">
             <h5 class="card-title">POCIONES</h5>
-            <a href="#" class="btn btn-primary">VAMOS!!</a>
+            <a href="/public/index_pociones.html" class="btn btn-primary">VAMOS!!</a>
           </div>
         </div>
       </div>
@@ -95,7 +95,7 @@
           <img src="/image/Pokeballs.png" class="card-img-top" alt="..." />
           <div class="card-body">
             <h5 class="card-title">POKEBALLS</h5>
-            <a href="#"><button type="button" class="btn btn-danger">VAMOS!!</button></a>
+            <a href="/public/index_pokeballs.html"><button type="button" class="btn btn-danger">VAMOS!!</button></a>
           </div>
         </div>
       </div>
@@ -104,7 +104,7 @@
           <img src="/image/Disco.png" class="card-img-top" alt="..." />
           <div class="card-body">
             <h5 class="card-title">MTS</h5>
-            <a href="#" class="btn btn-primary">VAMOS!!</a>
+            <a href="/public/index_mts.html" class="btn btn-primary">VAMOS!!</a>
           </div>
         </div>
       </div>
