--- a/public/index_inicio.html
+++ b/public/index_inicio.html
@@ -20,6 +20,7 @@
     />
     <link rel="stylesheet" href="/styles/Estilo_Fondo_y_Navbar.css">
     <link rel="stylesheet" href="/styles/Estilo_PokeShop.css" />
+    <link rel="stylesheet icon" href="/image/IconoP.png">
   </head>
 
   <body>
