--- a/public/index_mts.html
+++ b/public/index_mts.html
@@ -20,13 +20,14 @@
     />
 
     <link rel="stylesheet" href="/styles/Estilo_Fondo_y_Navbar.css" />
+    <link rel="stylesheet icon" href="/image/IconoP.png">
 
   </head>
 
   <body>
     <nav class="navbar navbar-expand-lg">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#"
+        <a class="navbar-brand" href="/public/index_inicio.html"
           ><i class="PokeShop bi bi-bag-dash-fill"> PokeShop</i></a
         >
         <button
@@ -48,10 +49,10 @@
               href="/public/index_inicio.html"
               >INICIO</a
             >
-            <a class="Opcion nav-link" href="#">CONSULTAR</a>
-            <a class="Opcion nav-link" href="#">EDITAR</a>
-            <a class="Opcion nav-link" href="#">ELIMINAR</a>
-            <a class="Carrito nav-link" href="#"
+            <a class="Opcion nav-link" href="/public/index_consultar.html">CONSULTAR</a>
+            <a class="Opcion nav-link" href="/public/index_editar.html">EDITAR</a>
+            <a class="Opcion nav-link" href="/public/index_eliminar.html">ELIMINAR</a>
+            <a class="Carrito nav-link" href="/public/index_carrito.html"
               ><i class="bi bi-cart-fill"> Carrito</i></a
             >
           </div>
