--- a/public/index_pociones.html
+++ b/public/index_pociones.html
@@ -20,13 +20,14 @@
     />
 
     <link rel="stylesheet" href="/styles/Estilo_Fondo_y_Navbar.css" />
+    <link rel="stylesheet icon" href="/image/IconoP.png">
 
   </head>
 
   <body>
     <nav class="navbar navbar-expand-lg">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#"
+        <a class="navbar-brand" href="/public/index_inicio.html"
           ><i class="PokeShop bi bi-bag-dash-fill"> PokeShop</i></a
         >
         <button
@@ -48,16 +49,46 @@
               href="/public/index_inicio.html"
               >INICIO</a
             >
-            <a class="Opcion nav-link" href="#">CONSULTAR</a>
-            <a class="Opcion nav-link" href="#">EDITAR</a>
-            <a class="Opcion nav-link" href="#">ELIMINAR</a>
-            <a class="Carrito nav-link" href="#"
+            <a class="Opcion nav-link" href="/public/index_consultar.html">CONSULTAR</a>
+            <a class="Opcion nav-link" href="/public/index_editar.html">EDITAR</a>
+            <a class="Opcion nav-link" href="/public/index_eliminar.html">ELIMINAR</a>
+            <a class="Carrito nav-link" href="/public/index_carrito.html"
               ><i class="bi bi-cart-fill"> Carrito</i></a
             >
           </div>
         </div>
       </div>
     </nav>
+
+    <h1>POCIONES</h1>
+
+<div class="container">
+  <div class="row" id="Pociones">
+
+  </div>    
+<template id="template-Pociones">
+  <div class="col-2 mb-4">    
+    <div class="card mb-3" style="max-width: 540px;">
+      <div class="row g-0">
+        <div class="col-md-4">
+          <img src="" class="img-fluid rounded-start" alt="">
+        </div>
+        <div class="col-md-8">
+          <div class="card-body">
+            <h5 class="CTitulo card-title"></h5>
+            <p class="PId card-text"></p>
+            <p class="PDescripcion card-text"></p>
+            <p class="PPrecio card-text"></p>
+            <button class="btn btn dark"></button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</template>
+</div>
+
+<script src="/scripts/app_Pocion.js"></script>
 
   </body>
 
