--- a/public/index_eliminar.html
+++ b/public/index_eliminar.html
@@ -27,7 +27,7 @@
   <body>
     <nav class="navbar navbar-expand-lg">
       <div class="container-fluid">
-        <a class="navbar-brand" href="/public/index_inicio.html"
+        <a class="navbar-brand" href="/index_inicio.html"
           ><i class="PokeShop bi bi-bag-dash-fill"> PokeShop</i></a
         >
         <button
@@ -46,7 +46,7 @@
             <a
               class="Opcion nav-link active"
               aria-current="page"
-              href="/public/index_inicio.html"
+              href="/index_inicio.html"
               >INICIO</a
             >
             <a class="Opcion nav-link" href="/public/index_consultar.html">CONSULTAR</a>
