--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="Opcion nav-link active" aria-current="page" href="#"
+            <a class="Opcion nav-link active" aria-current="page"
               >INICIO</a
             >
             <a class="Opcion nav-link" href="/public/index_consultar.html">CONSULTAR</a>
