Interfaz de todos los api terminado

--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
         Somos una tienda que vende Pokémon rescatados del Team Rocket. Se
         encuentran desde la primera o la ultima evolucion, también importamos
         pociones, pokeballs y MT para sus ataques. Estamos en las siguientes
-        regiones Kanto, Johto, Sinnoh, kalos y pronto en Galar. Estamos
-        autorizados por el profesor Oak y por maestros tales como Lance, Cintia,
+        regiones Kanto, Johto, Sinnoh, kalos y pronto en Galar. Autorizados 
+        por el profesor Oak y por maestros tales como Lance, Cintia,
         N y el actual campeon mundial Ash.
       </p>
       <img class="LogoPika1" src="/image/pikachu.png" />
