--- a/public/index_pociones.html
+++ b/public/index_pociones.html
@@ -20,6 +20,7 @@
     />
 
     <link rel="stylesheet" href="/styles/Estilo_Fondo_y_Navbar.css" />
+    <link rel="stylesheet" href="/styles/Estilo_VariosP.css">
     <link rel="stylesheet icon" href="/image/IconoP.png">
 
   </head>
@@ -27,7 +28,7 @@
   <body>
     <nav class="navbar navbar-expand-lg">
       <div class="container-fluid">
-        <a class="navbar-brand" href="/index_inicio.html"
+        <a class="navbar-brand" href="/index.html"
           ><i class="PokeShop bi bi-bag-dash-fill"> PokeShop</i></a
         >
         <button
@@ -46,7 +47,7 @@
             <a
               class="Opcion nav-link active"
               aria-current="page"
-              href="/index_inicio.html"
+              href="/index.html"
               >INICIO</a
             >
             <a class="Opcion nav-link" href="/public/index_consultar.html">CONSULTAR</a>
@@ -67,7 +68,7 @@
 
   </div>    
 <template id="template-Pociones">
-  <div class="col-2 mb-4">    
+  <div class="col-4">    
     <div class="card mb-3" style="max-width: 540px;">
       <div class="row g-0">
         <div class="col-md-4">
