--- a/public/index_pokeballs.html
+++ b/public/index_pokeballs.html
@@ -20,13 +20,14 @@
     />
 
     <link rel="stylesheet" href="/styles/Estilo_Fondo_y_Navbar.css" />
+    <link rel="stylesheet" href="/styles/Estilo_VariosP.css">
     <link rel="stylesheet icon" href="/image/IconoP.png">
   </head>
 
   <body>
     <nav class="navbar navbar-expand-lg">
       <div class="container-fluid">
-        <a class="navbar-brand" href="/index_inicio.html"
+        <a class="navbar-brand" href="/index.html"
           ><i class="PokeShop bi bi-bag-dash-fill"> PokeShop</i></a
         >
         <button
@@ -45,7 +46,7 @@
             <a
               class="Opcion nav-link active"
               aria-current="page"
-              href="/index_inicio.html"
+              href="/index.html"
               >INICIO</a
             >
             <a class="Opcion nav-link" href="/public/index_consultar.html">CONSULTAR</a>
@@ -59,6 +60,37 @@
       </div>
     </nav>
 
+    <h1>POKEBALLS</h1>
+
+    <div class="container">
+      <div class="row" id="Pokeballs">
+    
+      </div>
+      
+      <template id="template-Pokeballs"> 
+        <div class="col-4"> 
+          <div class="card mb-3" style="max-width: 540px;">
+            <div class="row g-0">
+              <div class="col-md-4">
+                <img src="" class="img-fluid rounded-start" alt="">
+              </div>
+              <div class="col-md-8">
+                <div class="card-body">
+                  <h5 class="CTitulo card-title"></h5>
+                  <p class="PId card-text"></p>
+                  <p class="PDescripcion card-text"></p>
+                  <p class="PPrecio card-text"></p>
+                  <button class="btn btn dark"></button>
+                </div>
+              </div>
+            </div>
+          </div>
+      </template>
+    </div>
+    </div>
+
   </body>
+
+  <script src="/scripts/app_Pokeballs.js"></script>
 
 </html>
