Interfaz de api teminada

--- a/public/index_mts.html
+++ b/public/index_mts.html
@@ -69,7 +69,7 @@
       </div>
       
       <template id="template-Mts">
-        <div class="col-4">    
+        <div class="col-4"> 
           <div class="card mb-3" style="max-width: 540px;">
             <div class="row g-0">
               <div class="col-md-4">
@@ -77,16 +77,24 @@
               </div>
               <div class="col-md-8">
                 <div class="card-body">
-                  <h5 class="CTitulo card-title"></h5>
-                  <p class="PId card-text"></p>
-                  <p class="PDescripcion card-text"></p>
-                  <p class="PPrecio card-text"></p>
-                  <button class="btn btn dark"></button>
+                  <h5 class="card-title"></h5>
+                  <div class="PId">
+                  <p1 class="card-text"></p1>
+                  </div>
+                  <div class="PDes">
+                  <p2 class="card-text"></p2>
+                  </div>
+                  <div class="PPre">
+                  <p3 class="card-text"></p3>
+                  </div>
+                  <i class="LadoI bi bi-caret-left-fill"></i>
+                  <p class="Contador">0</p>
+                  <i class="LadoD bi bi-caret-right-fill"></i>
+                  <button class="btn btn-primary">CARRITO</button>
                 </div>
               </div>
             </div>
           </div>
-        </div>
       </template>
     </div>
 
