Intento de guardar

--- a/public/index_pociones.html
+++ b/public/index_pociones.html
@@ -89,7 +89,7 @@
             <i class="LadoI bi bi-caret-left-fill"></i>
             <p class="Contador">0</p>
             <i class="LadoD bi bi-caret-right-fill"></i>
-            <button class="btn btn-primary">CARRITO</button>
+            <a href="/public/index_carrito.html"><button class="btn btn-primary">CARRITO</button></a>
           </div>
         </div>
       </div>
